Додає адаптивні зображення до сторінки Портфоліо

--- a/portfolio.html
+++ b/portfolio.html
@@ -111,11 +111,21 @@
             <li class="projects__item">
               <a class="projects__link" href="#">
                 <div class="projects__overlay">
-                  <img
-                    class="projects__img"
-                    src="./images/tehnocrack-img.jpg"
-                    alt="Ноутбук з відкритим сайтом"
-                  />
+                  <picture class="projects__img">
+                    <source srcset="./images/tehnocrack-img-480.jpg 450w, ./images/tehnocrack-img-480@2x.jpg 900w" 
+                      media="(max-width: 767px)" 
+                      sizes="(min-width: 480px) 450px, 100vw">
+                    <source srcset="./images/tehnocrack-img-768.jpg 354w, ./images/tehnocrack-img-768@2x.jpg 708w" 
+                      media="(max-width: 1199px)" 
+                      sizes="(min-width: 768px) 354px, 50vw">
+                    <source srcset="./images/tehnocrack-img.jpg 370w, ./images/tehnocrack-img@2x.jpg 740w" 
+                      media="(min-width: 1200px)" 
+                      sizes="(min-width: 1200px) 370px, 33vw">
+                    <img                    
+                      src="./images/tehnocrack-img-480.jpg"
+                      alt="Ноутбук з відкритим сайтом"
+                    />
+                  </picture>
                   <div class="projects__description">
                     <p class="projects__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -134,11 +144,21 @@
             <li class="projects__item">
               <a class="projects__link" href="#">
                 <div class="projects__overlay">
-                  <img
-                    class="projects__img"
-                    src="./images/poster-img.jpg"
-                    alt="Постер з баскетболістами"
-                  />
+                  <picture class="projects__img">
+                    <source srcset="./images/poster-img-480.jpg 450w, ./images/poster-img-480@2x.jpg 900w" 
+                      media="(max-width: 767px)" 
+                      sizes="(min-width: 480px) 450px, 100vw">
+                    <source srcset="./images/poster-img-768.jpg 354w, ./images/poster-img-768@2x.jpg 708w" 
+                      media="(max-width: 1199px)" 
+                      sizes="(min-width: 768px) 354px, 50vw">
+                    <source srcset="./images/poster-img.jpg 370w, ./images/poster-img@2x.jpg 740w" 
+                      media="(min-width: 1200px)" 
+                      sizes="(min-width: 1200px) 370px, 33vw">
+                    <img                      
+                      src="./images/poster-img.jpg"
+                      alt="Постер з баскетболістами"
+                    />
+                  </picture>                  
                   <div class="projects__description">
                     <p class="projects__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -159,11 +179,21 @@
             <li class="projects__item">
               <a class="projects__link" href="#">
                 <div class="projects__overlay">
-                  <img
-                    class="projects__img"
-                    src="./images/restaurant-seafood-img.jpg"
-                    alt="Логотип ресторану"
-                  />
+                  <picture class="projects__img">
+                    <source srcset="./images/restaurant-seafood-img-480.jpg 450w, ./images/restaurant-seafood-img-480@2x.jpg 900w" 
+                      media="(max-width: 767px)" 
+                      sizes="(min-width: 480px) 450px, 100vw">
+                    <source srcset="./images/restaurant-seafood-img-768.jpg 354w, ./images/restaurant-seafood-img-768@2x.jpg 708w" 
+                      media="(max-width: 1199px)" 
+                      sizes="(min-width: 768px) 354px, 50vw">
+                    <source srcset="./images/restaurant-seafood-img.jpg 370w, ./images/restaurant-seafood-img@2x.jpg 740w" 
+                      media="(min-width: 1200px)" 
+                      sizes="(min-width: 1200px) 370px, 33vw">
+                    <img
+                      src="./images/restaurant-seafood-img.jpg"
+                      alt="Логотип ресторану"
+                    />
+                  </picture>
                   <div class="projects__description">
                     <p class="projects__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -182,11 +212,21 @@
             <li class="projects__item">
               <a class="projects__link" href="#">
                 <div class="projects__overlay">
-                  <img
-                    class="projects__img"
-                    src="./images/prime-img.jpg"
-                    alt="Навушники"
-                  />
+                  <picture class="projects__img">
+                    <source srcset="./images/prime-img-480.jpg 450w, ./images/prime-img-480@2x.jpg 900w" 
+                      media="(max-width: 767px)" 
+                      sizes="(min-width: 480px) 450px, 100vw">
+                    <source srcset="./images/prime-img-768.jpg 354w, ./images/prime-img-768@2x.jpg 708w" 
+                      media="(max-width: 1199px)" 
+                      sizes="(min-width: 768px) 354px, 50vw">
+                    <source srcset="./images/prime-img.jpg 370w, ./images/prime-img@2x.jpg 740w" 
+                      media="(min-width: 1200px)" 
+                      sizes="(min-width: 1200px) 370px, 33vw">
+                    <img
+                      src="./images/prime-img.jpg"
+                      alt="Навушники"
+                    />
+                  </picture>
                   <div class="projects__description">
                     <p class="projects__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -205,11 +245,21 @@
             <li class="projects__item">
               <a class="projects__link" href="#">
                 <div class="projects__overlay">
-                  <img
-                    class="projects__img"
-                    src="./images/boxes-img.jpg"
-                    alt="Дві коробки"
-                  />
+                  <picture class="projects__img">
+                    <source srcset="./images/boxes-img-480.jpg 450w, ./images/boxes-img-480@2x.jpg 900w" 
+                      media="(max-width: 767px)" 
+                      sizes="(min-width: 480px) 450px, 100vw">
+                    <source srcset="./images/boxes-img-768.jpg 354w, ./images/boxes-img-768@2x.jpg 708w" 
+                      media="(max-width: 1199px)" 
+                      sizes="(min-width: 768px) 354px, 50vw">
+                    <source srcset="./images/boxes-img.jpg 370w, ./images/boxes-img@2x.jpg 740w" 
+                      media="(min-width: 1200px)" 
+                      sizes="(min-width: 1200px) 370px, 33vw">
+                    <img
+                      src="./images/boxes-img.jpg"
+                      alt="Дві коробки"
+                    />
+                  </picture>
                   <div class="projects__description">
                     <p class="projects__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -228,11 +278,21 @@
             <li class="projects__item">
               <a class="projects__link" href="#">
                 <div class="projects__overlay">
-                  <img
-                    class="projects__img"
-                    src="./images/inspiration-img.jpg"
-                    alt="Монітор комп'ютера"
-                  />
+                  <picture class="projects__img">
+                    <source srcset="./images/inspiration-img-480.jpg 450w, ./images/inspiration-img-480@2x.jpg 900w" 
+                      media="(max-width: 767px)" 
+                      sizes="(min-width: 480px) 450px, 100vw">
+                    <source srcset="./images/inspiration-img-768.jpg 354w, ./images/inspiration-img-768@2x.jpg 708w" 
+                      media="(max-width: 1199px)" 
+                      sizes="(min-width: 768px) 354px, 50vw">
+                    <source srcset="./images/inspiration-img.jpg 370w, ./images/inspiration-img@2x.jpg 740w" 
+                      media="(min-width: 1200px)" 
+                      sizes="(min-width: 1200px) 370px, 33vw">
+                    <img
+                      src="./images/inspiration-img.jpg"
+                      alt="Монітор комп'ютера"
+                    />
+                  </picture>
                   <div class="projects__description">
                     <p class="projects__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -251,11 +311,21 @@
             <li class="projects__item">
               <a class="projects__link" href="#">
                 <div class="projects__overlay">
-                  <img
-                    class="projects__img"
-                    src="./images/edition-img.jpg"
-                    alt="Відкрита книга"
-                  />
+                  <picture class="projects__img">
+                    <source srcset="./images/edition-img-480.jpg 450w, ./images/edition-img-480@2x.jpg 900w" 
+                      media="(max-width: 767px)" 
+                      sizes="(min-width: 480px) 450px, 100vw">
+                    <source srcset="./images/edition-img-768.jpg 354w, ./images/edition-img-768@2x.jpg 708w" 
+                      media="(max-width: 1199px)" 
+                      sizes="(min-width: 768px) 354px, 50vw">
+                    <source srcset="./images/edition-img.jpg 370w, ./images/edition-img@2x.jpg 740w" 
+                      media="(min-width: 1200px)" 
+                      sizes="(min-width: 1200px) 370px, 33vw">
+                    <img
+                      src="./images/edition-img.jpg"
+                      alt="Відкрита книга"
+                    />
+                  </picture>
                   <div class="projects__description">
                     <p class="projects__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -274,11 +344,22 @@
             <li class="projects__item">
               <a class="projects__link" href="#">
                 <div class="projects__overlay">
-                  <img
-                    class="projects__img"
-                    src="./images/lab-img.jpg"
-                    alt="Етикетка"
-                  />
+                  <picture class="projects__img">
+                    <source srcset="./images/lab-img-480.jpg 450w, ./images/lab-img-480@2x.jpg 900w" 
+                      media="(max-width: 767px)" 
+                      sizes="(min-width: 480px) 450px, 100vw">
+                    <source srcset="./images/lab-img-768.jpg 354w, ./images/lab-img-768@2x.jpg 708w" 
+                      media="(max-width: 1199px)" 
+                      sizes="(min-width: 768px) 354px, 50vw">
+                    <source srcset="./images/lab-img.jpg 370w, ./images/lab-img@2x.jpg 740w" 
+                      media="(min-width: 1200px)" 
+                      sizes="(min-width: 1200px) 370px, 33vw">
+                    <img
+                      class="projects__img"
+                      src="./images/lab-img.jpg"
+                      alt="Етикетка"
+                    />
+                  </picture>
                   <div class="projects__description">
                     <p class="projects__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -297,11 +378,21 @@
             <li class="projects__item">
               <a class="projects__link" href="#">
                 <div class="projects__overlay">
-                  <img
-                    class="projects__img"
-                    src="./images/growing-businnes-img.jpg"
-                    alt="Руки працюють за ноутбуком"
-                  />
+                  <picture class="projects__img">
+                    <source srcset="./images/growing-businnes-img-480.jpg 450w, ./images/growing-businnes-img-480@2x.jpg 900w" 
+                      media="(max-width: 767px)" 
+                      sizes="(min-width: 480px) 450px, 100vw">
+                    <source srcset="./images/growing-businnes-img-768.jpg 354w, ./images/growing-businnes-img-768@2x.jpg 708w" 
+                      media="(max-width: 1199px)" 
+                      sizes="(min-width: 768px) 354px, 50vw">
+                    <source srcset="./images/growing-businnes-img.jpg 370w, ./images/growing-businnes-img@2x.jpg 740w" 
+                      media="(min-width: 1200px)" 
+                      sizes="(min-width: 1200px) 370px, 33vw">
+                    <img
+                      src="./images/growing-businnes-img.jpg"
+                      alt="Руки працюють за ноутбуком"
+                    />
+                  </picture>
                   <div class="projects__description">
                     <p class="projects__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
