--- a/portfolio.html
+++ b/portfolio.html
@@ -155,7 +155,7 @@
                       media="(min-width: 1200px)" 
                       sizes="(min-width: 1200px) 370px, 33vw">
                     <img                      
-                      src="./images/poster-img.jpg"
+                      src="./images/poster-img-480.jpg"
                       alt="Постер з баскетболістами"
                     />
                   </picture>                  
@@ -190,7 +190,7 @@
                       media="(min-width: 1200px)" 
                       sizes="(min-width: 1200px) 370px, 33vw">
                     <img
-                      src="./images/restaurant-seafood-img.jpg"
+                      src="./images/restaurant-seafood-img-480.jpg"
                       alt="Логотип ресторану"
                     />
                   </picture>
@@ -223,7 +223,7 @@
                       media="(min-width: 1200px)" 
                       sizes="(min-width: 1200px) 370px, 33vw">
                     <img
-                      src="./images/prime-img.jpg"
+                      src="./images/prime-img-480.jpg"
                       alt="Навушники"
                     />
                   </picture>
@@ -256,7 +256,7 @@
                       media="(min-width: 1200px)" 
                       sizes="(min-width: 1200px) 370px, 33vw">
                     <img
-                      src="./images/boxes-img.jpg"
+                      src="./images/boxes-img-480.jpg"
                       alt="Дві коробки"
                     />
                   </picture>
@@ -289,7 +289,7 @@
                       media="(min-width: 1200px)" 
                       sizes="(min-width: 1200px) 370px, 33vw">
                     <img
-                      src="./images/inspiration-img.jpg"
+                      src="./images/inspiration-img-480.jpg"
                       alt="Монітор комп'ютера"
                     />
                   </picture>
@@ -322,7 +322,7 @@
                       media="(min-width: 1200px)" 
                       sizes="(min-width: 1200px) 370px, 33vw">
                     <img
-                      src="./images/edition-img.jpg"
+                      src="./images/edition-img-480.jpg"
                       alt="Відкрита книга"
                     />
                   </picture>
@@ -355,8 +355,7 @@
                       media="(min-width: 1200px)" 
                       sizes="(min-width: 1200px) 370px, 33vw">
                     <img
-                      class="projects__img"
-                      src="./images/lab-img.jpg"
+                      src="./images/lab-img-480.jpg"
                       alt="Етикетка"
                     />
                   </picture>
@@ -389,7 +388,7 @@
                       media="(min-width: 1200px)" 
                       sizes="(min-width: 1200px) 370px, 33vw">
                     <img
-                      src="./images/growing-businnes-img.jpg"
+                      src="./images/growing-businnes-img-480.jpg"
                       alt="Руки працюють за ноутбуком"
                     />
                   </picture>
